# uv_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: ImageBoundingBox.msg  ImageBoundingBoxListStamped.msg  ImageContour.msg  ImageContourListStamped.msg  ImagePoint.msg  ImagePointListStamped.msg  MapRegions.msg  Object.msg  ObjectMesh.msg  ObjectPointCloud.msg  ObjectsDetected.msg  PtuControlParams.msg  Regions.msg
