<?xml version="1.0"?>
<package>
  <name>uv_msgs</name>
  <version>0.1.0</version>
  <description>
    Implementation of University of Veracruz (UV) ROS mesagges needed by some packafges and nodes.
 </description>

  <maintainer email="anmarin@uv.mx">Antonio Marin-Hernandez</maintainer>
  <license>BSD</license>

  <url type="website">http://www.uv.mx/robotica/ros/uv_msgs</url>
  <url type="repository">https://github.uv.mx/ros/uv_msgs</url>

  <author email="anmarin@uv.mx">Antonio Marin-Hernandez</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
